<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_welcome_title_txt"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructions_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_welcome_message_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_phone_image"
        app:layout_constraintTop_toBottomOf="@id/welcome_text" />

    <ImageView
        android:id="@+id/login_phone_image"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@id/phone_validation_card_view"
        android:src="@drawable/ic_phone_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructions_text" />

    <androidx.cardview.widget.CardView
        android:id="@+id/phone_validation_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@id/facebook_init_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_phone_image">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" >

            <EditText
                android:id="@+id/login_phone_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/login_phone_hint_example"
                android:inputType="phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/send_phone_number_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="8dp"
                android:textAlignment="center"
                />

        <ImageButton
            android:id="@+id/send_phone_number_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_send"
            app:layout_constraintStart_toEndOf="@id/login_phone_edit_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



    <Button
        android:id="@+id/facebook_init_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_top_margin"
        android:background="@color/facebook_blue"
        android:text="@string/login_init_with_facebook_button"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/default_top_margin"
        android:layout_marginEnd="@dimen/default_top_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_validation_card_view" />

</androidx.constraintlayout.widget.ConstraintLayout>